<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrd_inspection"
            android:fontFamily="@string/NameTxt"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="500dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/dam_picture"

                    android:src="@drawable/images"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NameTxt"
                    android:textColorHint="@color/black"
                    android:id="@+id/nameTxt"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:autofillHints="@android:string/autofill"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/designationSpn"
                    android:entries="@array/designation"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_inspection"
                    android:textColorHint="@color/black"
                    android:id="@+id/dateTxt"
                    android:inputType="date"
                    android:textSize="15sp"
                    android:autofillHints="@android:string/autofill"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ongoing"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Completed"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>

                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/features"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/micro"
                            android:textColor="@color/black"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sprinkler"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="50dp"
                        android:paddingEnd="50dp">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scada"
                            android:textColor="@color/black"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_channel"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quality_of_work"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:outlineSpotShadowColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_complete"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="10"
                    android:max="366"
                    android:id="@+id/timeSk"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:minLines="1"
                    android:hint="@string/enter_suggestion"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    android:id="@+id/suggestionTxt"
                    android:inputType="textMultiLine" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:background="@drawable/background_submit"
                    android:id="@+id/submitBtn"/>





            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>