<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_resources_department"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madhya_pradesh"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="viewEnd"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="end" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:src="@drawable/login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="Dam Picture" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/usernameTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/passwordTxt"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/background_submit"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:id="@+id/loginBtn"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/background_submit"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="80dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>