<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_resources_department"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madhya_pradesh"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="viewEnd"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="end" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="410dp"
                        android:layout_height="230dp"
                        android:src="@drawable/bansagar" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bansagar_dam_sehdol_madhya_pradesh"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <ImageView
                android:layout_width="410dp"
                android:layout_height="230dp"
                android:src="@drawable/gandhisagar"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gandhi_sagar_dam_mandsaur_madhya_pradesh"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="410dp"
                        android:layout_height="230dp"
                        android:src="@drawable/madikheda"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/madikheda_dam_shivpuri_madhya_pradesh"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minor_project"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/background"
            android:id="@+id/minorBtn"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/major_project"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/background"
            android:layout_marginTop="5dp"
            android:id="@+id/majorBtn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_inspection"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/inspectionBtn"
            android:layout_marginTop="5dp"
            android:background="@drawable/background"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/previous_inspection_report"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/background"
            android:id="@+id/recordBtn"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>